tests/baselines/reference/nodeModulesAllowJsCjsFromJs(module=node18).errors.txt
error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
bar.ts(1,8): error TS2613: Module '"foo"' has no default export. Did you mean to use 'import { foo } from "foo"' instead?


!!! error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
==== foo.cjs (0 errors) ====
    exports.foo = "foo"
==== bar.ts (1 errors) ====
    import foo from "./foo.cjs"
           ~~~
!!! error TS2613: Module '"foo"' has no default export. Did you mean to use 'import { foo } from "foo"' instead?
    foo.foo;